--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@ body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  height: 100vh;
+  font-size: 16px;
 }
 
 @keyframes gradient {
@@ -20,9 +20,10 @@ body {
   }
 }
 
-h1 {
+h2 {
   text-align: center;
   color: #fff;
+  margin-bottom: 30px;
 }
 
 form {
@@ -89,7 +90,7 @@ button {
 }
 
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
