--- a/public/styles.css
+++ b/public/styles.css
@@ -40,7 +40,7 @@ label {
 }
 
 textarea {
-  height: 200px;
+  height: 150px;
   width: 80%;
   font-size: 18px;
   padding: 10px;
@@ -69,10 +69,11 @@ button {
   min-height: 100px;
   overflow-wrap: break-word;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #b4b1b1a4;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 20px;
+  color: #fff;
 }
 
 #copy-button-container {
